# AgentBridge

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/src/: main.py  seed.py
backend/src/agents/: orchestrator.py
backend/src/agents/nodes/: action.py  critic.py  knowledge.py  planner.py  reasoning.py
backend/src/agents/state/: agent_state.py
backend/src/api/routes/: analytics.py  auth.py
backend/src/domain/models/: models.py
backend/src/infra/db/: database.py
backend/src/infra/embeddings/: service.py
backend/src/infra/ingestion/: pipeline.py  production_pipeline.py
backend/src/infra/security/: rbac.py
backend/src/infra/storage/: bigquery.py
backend/src/mcp/: postgres_server.py  resiliency.py
backend/src/ml/: ops.py
backend/src/ml/evaluations/: engine.py
backend/src/ml/models/: priority_predictor.py  ticket_router.py
backend/src/ml/pipelines/: readiness.py
backend/src/observability/: metrics.py  setup.py
data/: tenants.json
docs/adr/: 001-multi-agent-orchestration.md  002-dual-layer-state-management.md  003-evaluation-strategy.md
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/agents/: page.tsx
frontend/src/app/(dashboard)/connectors/: page.tsx
frontend/src/app/(dashboard)/data-readiness/: page.tsx
frontend/src/app/(dashboard)/evaluations/: page.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/lib/: api.ts
infra/: main.tf  variables.tf
(+4 files in other folders)
