[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-cloud-aiplatform>=1.154.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "langgraph>=1.2.2",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0",
    "torch>=2.12.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
